--- a/kilo/requirements.txt
+++ b/kilo/requirements.txt
@@ -2,20 +2,11 @@
 Django==1.9.6
 djangorestframework==3.3.3
 
-# redis cache
-redis==2.10.5
-
-# for access redis cache
-redisco==0.1.4
-django-redis-cache==0.13.1
-
 # for call rest api
 httplib2==0.9.2
 
-# for call openstack api
-python-keystoneclient==3.6.0
-python-glanceclient==2.5.0
-python-neutronclient==6.0.0
+# for call openstack auth and transport api
+keystoneauth1==2.18.0
 
 # for unit test
 coverage==4.2
