--- a/newton/pom.xml
+++ b/newton/pom.xml
@@ -13,14 +13,14 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.openo.multivimdriver.openstack</groupId>
+        <groupId>org.onap.multivimdriver.openstack</groupId>
         <artifactId>multivimdriver-openstack-root</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.openo.multivimdriver.openstack</groupId>
+    <groupId>org.onap.multivimdriver.openstack</groupId>
     <artifactId>multivimdriver-openstack-newton</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>multivimdriver/openstack/newton</name>
     <description>multivimdriver for openstack newton</description>
