--- a/newton/requirements.txt
+++ b/newton/requirements.txt
@@ -8,6 +8,9 @@ httplib2==0.9.2
 # for call openstack auth and transport api
 keystoneauth1==2.18.0
 
+#python-memcached
+python-memcached
+
 # for unit test
 coverage==4.2
 mock==2.0.0
