Add multicloud proxy for OpenStack newton
refactor seed code for newton
add proxy for identiy,service, add registration, extension
management

Issue-Id: MULTICLOUD-58
Change-Id: I6a7a21427af4c88b7f060470c1176009c13fc19e
Signed-off-by: Bin Yang <bin.yang@windriver.com>

--- a/newton/tox.ini
+++ b/newton/tox.ini
@@ -8,3 +8,5 @@ downloadcache = ~/cache/pip
 [testenv]
 deps = -r{toxinidir}/requirements.txt
 commands = coverage run --branch manage.py test newton
+    coverage html --omit="*test*,*__init__.py" -d htmlcov
+
