Add OpenStack proxy for newton
refactor seed code for newton
add proxy for identiy,service, add registration, extension
management

Issue-Id: MULTICLOUD-58
Change-Id: I6a7a21427af4c88b7f060470c1176009c13fc19e
Signed-off-by: Bin Yang <bin.yang@windriver.com>

--- a/pom.xml
+++ b/pom.xml
@@ -21,15 +21,14 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.openo.multivimdriver.openstack</groupId>
-    <artifactId>multivimdriver-openstack-root</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
-    <name>multivim-openstack</name>
+    <groupId>org.onap.multicloud.openstack</groupId>
+    <artifactId>multicloud-openstack-root</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <name>multicloud/openstack</name>
     <packaging>pom</packaging>
     
     <modules>
         <module>newton</module>
-        <module>kilo</module>
     </modules>
 
     <build>
