--- a/newton/pom.xml
+++ b/newton/pom.xml
@@ -16,6 +16,7 @@
         <groupId>org.onap.multicloud.openstack</groupId>
         <artifactId>multicloud-openstack-root</artifactId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.onap.multicloud.openstack</groupId>
