--- a/newton/pom.xml
+++ b/newton/pom.xml
@@ -13,10 +13,10 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.onap.multicloud.openstack</groupId>
-        <artifactId>multicloud-openstack-root</artifactId>
+        <groupId>org.onap.oparent</groupId>
+        <artifactId>oparent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../</relativePath>
+        <relativePath>../oparent</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.onap.multicloud.openstack</groupId>
