Add Python 3.5 support
Python 2.7 will be supported until 2020[1]. This changes helps to
prepares the transition to the transition to Python 3.x and those
systems which not support other versions.

[1] https://hg.python.org/peps/rev/76d43e52d978

Change-Id: Ic2847e907e29d565c89b0448135393f923de20e3
Signed-off-by: Victor Morales <victor.morales@intel.com>
Issue-Id: MULTICLOUD-83

--- a/newton/tox.ini
+++ b/newton/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27
+envlist = py27,py35
 skipsdist = true
 
 [tox:jenkins]
@@ -8,5 +8,5 @@ downloadcache = ~/cache/pip
 [testenv]
 deps = -r{toxinidir}/requirements.txt
 commands = coverage run --branch manage.py test newton
-    coverage html --omit="*test*,*__init__.py" -d htmlcov
+    coverage html --omit=".tox*,*test*,*__init__.py" -d htmlcov
 
