--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <groupId>org.onap.multicloud.openstack</groupId>
     <artifactId>multicloud-openstack-root</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>multicloud/openstack</name>
+    <name>multicloud-openstack</name>
     <packaging>pom</packaging>
     
     <modules>
