Fix bugs in restcall
fix bug and update dockerfile

Change-Id: I91579ddc91fa4a0a67360d2e72934f6846e2c2c4
Issue-Id: MULTICLOUD-58
Signed-off-by: Bin Yang <bin.yang@windriver.com>

--- a/newton/docker/Dockerfile
+++ b/newton/docker/Dockerfile
@@ -1,5 +1,11 @@
 FROM python:2
 
+ARG HTTP_PROXY=${HTTP_PROXY}
+ARG HTTPS_PROXY=${HTTPS_PROXY}
+
+ENV http_proxy $HTTP_PROXY
+ENV https_proxy $HTTPS_PROXY
+
 ENV MSB_ADDR "127.0.0.1"
 ENV MSB_PORT "80"
 ENV AAI_ADDR "aai.api.simpledemo.openecomp.org"
