Refactor newton and ocato proxy
refactor code and fix bugs to update proxy prefix

Change-Id: I4a02b0570759f087581e875cc683d4475bd2121b
Issue-Id: MULTICLOUD-89
Signed-off-by: Bin Yang <bin.yang@windriver.com>

--- a/ocata/docker/Dockerfile
+++ b/ocata/docker/Dockerfile
@@ -23,6 +23,7 @@ RUN apt-get update && \
     cd /opt/ && \
     wget -O multicloud-openstack-ocata.zip "https://nexus.onap.org/service/local/artifact/maven/redirect?r=snapshots&g=org.onap.multicloud.openstack&a=multicloud-openstack-ocata&e=zip&v=LATEST" && \
     unzip -q -o -B multicloud-openstack-ocata.zip && \
+    chmod +x /opt/ocata/*.sh && \
     rm -f multicloud-openstack-ocata.zip && \
     pip install -r /opt/ocata/requirements.txt
 
