setup function test framework
this patch is to add designate features in openstack

Change-Id: Ifb0cd9b45476ef12df6dd767706d639bf64c0752
Issue-Id: MULTICLOUD-92
Signed-off-by: Guo Ruijing <ruijing.guo@intel.com>

--- a/ocata/vagrant/control.conf
+++ b/ocata/vagrant/control.conf
@@ -14,10 +14,19 @@ DATABASE_PASSWORD=mysql
 RABBIT_PASSWORD=rabbit
 
 enable_plugin heat https://git.openstack.org/openstack/heat stable/ocata
-disable_service n-net
-disable_service tempest
-ENABLED_SERVICES+=,placement-api,q-svc,q-dhcp,q-meta,q-l3
-ENABLED_SERVICES+=,h-eng,h-api,h-api-cfn,h-api-cw
+enable_plugin designate https://git.openstack.org/openstack/designate stable/ocata
+
+disable_all_services
+enable_service key,rabbit,mysql
+enable_service n-api,n-cond,n-sch,n-novnc,n-crt,n-cauth,placement-api
+enable_service q-svc,q-dhcp,q-meta,q-l3
+enable_service c-sch,c-api,c-vol
+enable_service g-api,g-reg
+enable_service h-eng,h-api,h-api-cfn,h-api-cw
+enable_service horizon
+enable_service designate,designate-central,designate-api,designate-pool-manager,designate-zone-manager,designate-mdns
+
+DESIGNATE_BACKEND_DRIVER=bind9
 
 ## Neutron options
 FLOATING_RANGE="192.168.1.0/24"
