setup function test framework
this patch is to add designate features in openstack

Change-Id: Ifb0cd9b45476ef12df6dd767706d639bf64c0752
Issue-Id: MULTICLOUD-92
Signed-off-by: Guo Ruijing <ruijing.guo@intel.com>

--- a/ocata/vagrant/compute.conf
+++ b/ocata/vagrant/compute.conf
@@ -13,7 +13,8 @@ SERVICE_PASSWORD=admin
 DATABASE_PASSWORD=mysql
 RABBIT_PASSWORD=rabbit
 
-ENABLED_SERVICES=rabbit,n-cpu,n-novnc,placement-client,q-agt
+disable_all_services
+enable_service rabbit,n-cpu,n-novnc,placement-client,q-agt
 LIBVIRT_TYPE=qemu
 
 OVS_BRIDGE_MAPPINGS=public:br-ex
