Add windriver plugin
Change-Id: Icd27d7af12d6920810d7cbb163e8be70db49f121
Issue-Id: MULTICLOUD-89
Signed-off-by: Bin Yang <bin.yang@windriver.com>

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,8 @@
     
     <modules>
         <module>newton</module>
+        <module>ocata</module>
+        <module>windriver</module>
     </modules>
 
     <build>
