--- a/ocata/vagrant/Vagrantfile
+++ b/ocata/vagrant/Vagrantfile
@@ -31,11 +31,10 @@ Vagrant.configure("2") do |config|
     end
   end
 
-  config.vm.define "multicloud" do |config|
-    config.vm.hostname = "multicloud"
+  config.vm.define "onap" do |config|
+    config.vm.hostname = "onap"
     config.vm.network "private_network", ip: "192.168.0.30"
     config.vm.network :private_network,  ip: "192.168.1.30"
-    #config.vm.provision "shell", path: "setup_multivm.sh", privileged: false
     config.vm.provision "shell", path: "test/test_multicloud.sh", privileged: false
   end
 
