update port from 9004 to 9006
Change-Id: Ic2ad8eda3b21b6c11cabf89d65f5a72956262750
Issue-Id: MULTICLOUD-95
Signed-off-by: Guo Ruijing <ruijing.guo@intel.com>

--- a/ocata/vagrant/Vagrantfile
+++ b/ocata/vagrant/Vagrantfile
@@ -33,6 +33,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.define "onap" do |config|
     config.vm.hostname = "onap"
+    config.vm.synced_folder "../..", "/openstack"
     config.vm.network "private_network", ip: "192.168.0.30"
     config.vm.network :private_network,  ip: "192.168.1.30"
     config.vm.provision "shell", path: "test/test_multicloud.sh", privileged: false
