[DONT REVIEW] build docker from local maven
Change-Id: I4bbb437e3563833edef7ce020b158e8332d545e3
Issue-Id: MULTICLOUD-95
Signed-off-by: Guo Ruijing <ruijing.guo@intel.com>

--- a/ocata/vagrant/test/Dockerfile
+++ b/ocata/vagrant/test/Dockerfile
@@ -1,5 +1,25 @@
-FROM multicloud-ocata:latest
+FROM python:2
 
+ENV MSB_ADDR "127.0.0.1"
+ENV MSB_PORT "80"
+ENV AAI_ADDR "aai.api.simpledemo.openecomp.org"
+ENV AAI_PORT "8443"
+ENV AAI_SCHEMA_VERSION "v11"
+ENV AAI_USERNAME "AAI"
+ENV AAI_PASSWORD "AAI"
+
+EXPOSE 9006
+
+COPY multicloud-openstack-ocata.zip /opt
 RUN apt-get update && \
-     apt-get install -y vim
+    apt-get install -y vim memcached unzip && \
+    cd /opt/ && \
+    unzip -q -o -B multicloud-openstack-ocata.zip && \
+    chmod +x /opt/ocata/*.sh && \
+    rm -f multicloud-openstack-ocata.zip && \
+    pip install -r /opt/ocata/requirements.txt
+
 ADD extsys.py /opt/ocata/lib/newton/newton/pub/msapi/extsys.py
+
+WORKDIR /opt/ocata
+CMD /bin/sh -c /opt/ocata/run.sh
