Add staging docker images for OpenStack plugins
Change-Id: Ib64f30ab50002dca67c6835866ffc46fc83d7934
Issue-Id: MULTICLOUD-110
Signed-off-by: Bin Yang <bin.yang@windriver.com>

--- a/newton/pom.xml
+++ b/newton/pom.xml
@@ -28,6 +28,12 @@
     <packaging>pom</packaging>
     <name>multicloud/openstack/newton</name>
     <description>multicloud for openstack newton</description>
+    <properties>
+        <encoding>UTF-8</encoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <nexusproxy>https://nexus.onap.org</nexusproxy>
+    </properties>
     <build>
       <plugins>
         <plugin>
