--- a/ocata/pom.xml
+++ b/ocata/pom.xml
@@ -33,6 +33,12 @@
             <type>zip</type>
         </dependency>
     </dependencies>
+    <properties>
+        <encoding>UTF-8</encoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <nexusproxy>https://nexus.onap.org</nexusproxy>
+    </properties>
     <build>
       <plugins>
         <plugin>
