--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,14 @@
     <version>1.0.0-SNAPSHOT</version>
     <name>multicloud-openstack</name>
     <packaging>pom</packaging>
-    
+    <description>multicloud openstack</description>
+    <properties>
+        <encoding>UTF-8</encoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <nexusproxy>https://nexus.onap.org</nexusproxy>
+    </properties>
+
     <modules>
         <module>newton</module>
         <module>ocata</module>
@@ -57,15 +64,15 @@
                         <source>1.8</source>
                         <target>1.8</target>
                     </configuration>
-             </plugin>
-             <plugin>
+            </plugin>
+            <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-deploy-plugin</artifactId>
                  <version>2.7</version>
                      <configuration>
                          <retryFailedDeploymentCount>2</retryFailedDeploymentCount>
                      </configuration>
-             </plugin>
+            </plugin>
         </plugins>
     </build>
 </project>
