--- a/newton/tox.ini
+++ b/newton/tox.ini
@@ -7,6 +7,6 @@ downloadcache = ~/cache/pip
 
 [testenv]
 deps = -r{toxinidir}/requirements.txt
-commands = coverage run --branch manage.py test newton
-    coverage html --omit=".tox*,*test*,*__init__.py" -d htmlcov
-
+commands =
+  coverage run --branch manage.py test
+  coverage report --omit=".tox/*,*tests*,*__init__.py" --fail-under=67
