Add a UT threshold
This change helps to monitor and detect changes that reduce the
porcentage of the Unit test coverage.

Change-Id: I289f4c2f9d13b5531b8d7580f62a3a7ba5f3ee5f
Signed-off-by: Victor Morales <victor.morales@intel.com>
Issue-Id: MULTICLOUD-83
Signed-off-by: Bin Yang <bin.yang@windriver.com>

--- a/windriver/tox.ini
+++ b/windriver/tox.ini
@@ -9,6 +9,6 @@ downloadcache = ~/cache/pip
 setenv =
     PYTHONPATH = {toxinidir}/../newton
 deps = -r{toxinidir}/requirements.txt
-commands = coverage run --branch manage.py test titanium_cloud
-    coverage html --omit=".tox*,*test*,*__init__.py" -d htmlcov
-
+commands =
+    coverage run --branch manage.py test titanium_cloud
+    coverage report --omit=".tox/*,*tests*,*__init__.py,*newton*" --fail-under=30
