--- a/ocata/tox.ini
+++ b/ocata/tox.ini
@@ -9,6 +9,7 @@ downloadcache = ~/cache/pip
 setenv =
     PYTHONPATH = {toxinidir}/../newton
 deps = -r{toxinidir}/requirements.txt
-commands = coverage run --branch manage.py test ocata
-    coverage html --omit=".tox*,*test*,*__init__.py" -d htmlcov
+commands = 
+    coverage run --branch manage.py test
+    coverage report --omit=".tox/*,*tests*,*__init__.py,*newton*" --fail-under=30
 
