Add pbr as building tool
PBR is a library that helps to build python project through
configuration files simplifying the deployment for them.
This change adds support for it.

Change-Id: I77ac639d9ba2df7122cb6a9cec68ae7551bac89e
Signed-off-by: Victor Morales <victor.morales@intel.com>
Issue-Id: MULTICLOUD-83

--- a/newton/.gitignore
+++ b/newton/.gitignore
@@ -8,4 +8,10 @@ logs/*.log
 .tox
 .coverage
 htmlcov/
-
+AUTHORS
+ChangeLog
+nohup.out
+openstack_multicloud.egg-info/
+.eggs/
+build/
+test-reports/
