Separate test modules from requirements.txt
The modules required for unit tests can be included in another file,
this helps during the packaging process to avoid the addition of
non-required dependencies.

Change-Id: I3d1dc0c265a26e22be66d261f2de2ae939a1d6f8
Signed-off-by: Victor Morales <victor.morales@intel.com>
Issue-Id: MULTICLOUD-83

--- a/newton/tox.ini
+++ b/newton/tox.ini
@@ -6,7 +6,13 @@ skipsdist = true
 downloadcache = ~/cache/pip
 
 [testenv]
-deps = -r{toxinidir}/requirements.txt
+passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
+deps =
+    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/test-requirements.txt
 commands =
   coverage run --branch manage.py test
+
+[testenv:cover]
+commands =
   coverage report --omit=".tox/*,*tests*,*__init__.py" --fail-under=30
