--- a/newton/requirements.txt
+++ b/newton/requirements.txt
@@ -1,17 +1,12 @@
 # rest framework
-Django==1.9.6
-djangorestframework==3.3.3
+Django==1.9.6  # BSD
+djangorestframework==3.3.3 # BSD
 
 # for call rest api
-httplib2==0.9.2
+httplib2==0.9.2 # MIT
 
 # for call openstack auth and transport api
-keystoneauth1==2.18.0
+keystoneauth1==2.19.0 # Apache-2.0
 
-#python-memcached
-python-memcached
-
-# for unit test
-coverage==4.2
-mock==2.0.0
-unittest_xml_reporting==1.12.0
+# for memcached
+python-memcached # PSF
