--- a/ocata/vagrant/control.conf
+++ b/ocata/vagrant/control.conf
@@ -18,13 +18,15 @@ enable_plugin designate https://git.openstack.org/openstack/designate stable/oca
 
 disable_all_services
 enable_service key,rabbit,mysql
-enable_service n-api,n-cond,n-sch,n-novnc,n-crt,n-cauth,placement-api
-enable_service q-svc,q-dhcp,q-meta,q-l3
+enable_service n-api,n-cond,n-sch,n-cpu,n-novnc,n-crt,n-cauth,placement-api
+enable_service q-svc,q-dhcp,q-meta,q-l3,q-agt
 enable_service c-sch,c-api,c-vol
 enable_service g-api,g-reg
 enable_service h-eng,h-api,h-api-cfn,h-api-cw
 enable_service horizon
 enable_service designate,designate-central,designate-api,designate-pool-manager,designate-zone-manager,designate-mdns
+
+LIBVIRT_TYPE=qemu
 
 DESIGNATE_BACKEND_DRIVER=bind9
 
