Add UTs for VimDriverUtils class
The VimDriverUtils class contains utility methods for managing
sessions and vim information, as well as others for replacing
keys of a dictionary. This change add Unit Tests that validates
their correct functionality.

Change-Id: Ie569cc995c3e0ebc27f33e4c58652bb0ed34c0a7
Signed-off-by: Victor Morales <victor.morales@intel.com>
Issue-ID: MULTICLOUD-83

--- a/newton/tox.ini
+++ b/newton/tox.ini
@@ -15,4 +15,5 @@ commands =
 
 [testenv:cover]
 commands =
+  coverage html --omit=".tox/*,*tests*,*__init__.py"
   coverage report --omit=".tox/*,*tests*,*__init__.py" --fail-under=30
