--- a/ocata/vagrant/Vagrantfile
+++ b/ocata/vagrant/Vagrantfile
@@ -3,7 +3,7 @@ $num_compute_nodes = 1
 
 Vagrant.configure("2") do |config|
 
-  config.vm.box = "bento/ubuntu-16.04"
+  config.vm.box = "ubuntu/xenial64"
 
   config.vm.provider :virtualbox do |vb|
     vb.customize ["modifyvm", :id, "--memory", 9192]
@@ -12,31 +12,31 @@ Vagrant.configure("2") do |config|
     vb.customize "post-boot",["controlvm", :id, "setlinkstate1", "on"]
   end
 
-
   config.vm.define "control" do |config|
     config.vm.hostname = "control"
-    config.vm.network "private_network", ip: "192.168.0.10"
-    config.vm.network :private_network,  ip: "192.168.1.10"
-    config.vm.provision "shell", path: "bootstrap.sh", privileged: false
-    config.vm.provision "shell", path: "setup_control.sh", privileged: false
-  end
-
-  (1 .. $num_compute_nodes).each do |n|
-    config.vm.define vm_name = "compute-#{n}" do |config|
-      config.vm.hostname = vm_name
-      config.vm.network "private_network", ip: "192.168.0.#{n+20}"
-      config.vm.network :private_network,  ip: "192.168.1.#{n+20}"
-      config.vm.provision "shell", path: "bootstrap.sh", privileged: false
-      config.vm.provision "shell", path: "setup_compute.sh", privileged: false
-    end
+    config.vm.network :private_network, ip: "172.16.0.2", netmask: "255.255.255.0", auto_config: true   # Managment network
+    config.vm.network :private_network, ip: "192.168.50.2", netmask: "255.255.255.0", auto_config: true # Public and External network
+    config.vm.provision "shell", path: "bootstrap.sh"
+    config.vm.provision "shell", path: "setup_control.sh"
   end
 
   config.vm.define "onap" do |config|
     config.vm.hostname = "onap"
     config.vm.synced_folder "../..", "/openstack"
-    config.vm.network "private_network", ip: "192.168.0.30"
-    config.vm.network :private_network,  ip: "192.168.1.30"
+    config.vm.network :private_network, ip: "172.16.0.3", netmask: "255.255.255.0", auto_config: true   # Managment network
+    config.vm.network :private_network, ip: "192.168.50.3", netmask: "255.255.255.0", auto_config: true # Public and External network
     config.vm.provision "shell", path: "test/test_multicloud.sh", privileged: false
   end
+
+  (1 .. $num_compute_nodes).each do |n|
+    config.vm.define vm_name = "compute-#{n}" do |config|
+      config.vm.hostname = vm_name
+      config.vm.network :private_network, ip: "172.16.0.#{n+4}", netmask: "255.255.255.0", auto_config: true   # Managment network
+      config.vm.network :private_network, ip: "192.168.1.#{n+4}", netmask: "255.255.255.0", auto_config: true # Public and External network
+      config.vm.provision "shell", path: "bootstrap.sh"
+      config.vm.provision "shell", path: "setup_compute.sh"
+    end
+  end
+
 
 end
