Add common folder for all folder share
We will move common file to common folder. newton, ocata, windriver can
share this library which will include cache, database, exceptions, utils
and extsys so on.

Issue-ID: MULTICLOUD-138

Change-Id: Iea1b92cafd1ca4549210721cd9585c9d176bced3
Signed-off-by: Huang Haibin <haibin.huang@intel.com>

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <module>newton</module>
         <module>ocata</module>
         <module>windriver</module>
+        <module>common</module>
     </modules>
 
     <build>
