--- a/ocata/tox.ini
+++ b/ocata/tox.ini
@@ -7,7 +7,7 @@ downloadcache = ~/cache/pip
 
 [testenv]
 setenv =
-    PYTHONPATH = {toxinidir}/../newton
+    PYTHONPATH = {toxinidir}/../newton:{toxinidir}/../newton_base:{toxinidir}/../
 deps = -r{toxinidir}/requirements.txt
 commands = 
     coverage run --branch manage.py test
