Change services.py dependency
newton and windriver depend on newton services.py, we have moved
services.py to /share/newton_base. then we need change dependency
from newton to newton_base

Change-Id: I01be148995acc5228ef457e0a166db2b193a6677
Issue-ID: MULTICLOUD-138
Signed-off-by: Huang Haibin <haibin.huang@intel.com>

--- a/windriver/tox.ini
+++ b/windriver/tox.ini
@@ -7,7 +7,7 @@ downloadcache = ~/cache/pip
 
 [testenv]
 setenv =
-    PYTHONPATH = {toxinidir}/../newton
+    PYTHONPATH = {toxinidir}/../newton:{toxinidir}/../share
 deps = -r{toxinidir}/requirements.txt
 commands =
     coverage run --branch manage.py test titanium_cloud
