--- a/newton/tox.ini
+++ b/newton/tox.ini
@@ -6,6 +6,8 @@ skipsdist = true
 downloadcache = ~/cache/pip
 
 [testenv]
+setenv =
+    PYTHONPATH = {toxinidir}/../newton:{toxinidir}/../share
 passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
 deps =
     -r{toxinidir}/requirements.txt
