Add sonar coverage for MultiCloud OpenStack
Change-Id: I6526b56a06cd430bb1b95e7175d2a6d8f48ebc0c
Issue-ID: MULTICLOUD-171
Signed-off-by: Yun Huang <yun.huang@windriver.com>

--- a/newton/tox.ini
+++ b/newton/tox.ini
@@ -17,3 +17,4 @@ commands =
 commands =
   coverage html --omit=".tox/*,*tests*,*__init__.py"
   coverage report --omit=".tox/*,*tests*,*__init__.py" --fail-under=30
+  coverage xml -i
