--- a/windriver/tox.ini
+++ b/windriver/tox.ini
@@ -12,3 +12,4 @@ deps = -r{toxinidir}/requirements.txt
 commands =
     coverage run --branch manage.py test titanium_cloud
     coverage report --omit=".tox/*,*tests*,*__init__.py,*newton*" --fail-under=30
+    coverage xml -i
