--- a/ocata/tox.ini
+++ b/ocata/tox.ini
@@ -12,4 +12,4 @@ deps = -r{toxinidir}/requirements.txt
 commands = 
     coverage run --branch manage.py test
     coverage report --omit=".tox/*,*tests*,*__init__.py,*newton*" --fail-under=30
-
+    coverage xml -i
