--- a/windriver/tox.ini
+++ b/windriver/tox.ini
@@ -7,7 +7,7 @@ downloadcache = ~/cache/pip
 
 [testenv]
 setenv =
-    PYTHONPATH = {toxinidir}/../newton:{toxinidir}/../share
+    PYTHONPATH = {toxinidir}/../share
 deps = -r{toxinidir}/requirements.txt
 commands =
     coverage run --branch manage.py test titanium_cloud
