newton use share library
Change-Id: I0ed8ced042862edf8afa87fec3b457d019e811b4
Issue-ID: MULTICLOUD-138
Signed-off-by: Huang Haibin <haibin.huang@intel.com>

--- a/newton/tox.ini
+++ b/newton/tox.ini
@@ -6,15 +6,10 @@ skipsdist = true
 downloadcache = ~/cache/pip
 
 [testenv]
-passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
-deps =
-    -r{toxinidir}/requirements.txt
-    -r{toxinidir}/test-requirements.txt
-commands =
-  coverage run --branch manage.py test
-
-[testenv:cover]
-commands =
-  coverage html --omit=".tox/*,*tests*,*__init__.py"
-  coverage report --omit=".tox/*,*tests*,*__init__.py" --fail-under=30
-  coverage xml -i
+setenv =
+    PYTHONPATH = {toxinidir}/../share
+deps = -r{toxinidir}/requirements.txt
+commands = 
+    coverage run --branch manage.py test
+    coverage report --omit=".tox/*,*tests*,*__init__.py --fail-under=30
+    coverage xml -i
