--- a/newton/requirements.txt
+++ b/newton/requirements.txt
@@ -1,14 +1,19 @@
-pbr!=2.1.0,>=2.0.0 # Apache-2.0
+pbr!=2.1.0,>=2.0.0
 
 # rest framework
-Django==1.9.6  # BSD
-djangorestframework==3.3.3 # BSD
+Django==1.9.6
+djangorestframework==3.3.3
 
 # for call rest api
-httplib2==0.9.2 # MIT
+httplib2==0.9.2
 
 # for call openstack auth and transport api
-keystoneauth1==2.19.0 # Apache-2.0
+keystoneauth1==2.19.0
 
-# for memcached
-python-memcached # PSF
+#python-memcached
+python-memcached
+
+# for unit test
+coverage==4.2
+mock==2.0.0
+unittest_xml_reporting==1.12.0
