--- a/windriver/tox.ini
+++ b/windriver/tox.ini
@@ -1,9 +1,14 @@
 [tox]
-envlist = py27,py35
+envlist = py27,py35,cov
 skipsdist = true
 
 [tox:jenkins]
 downloadcache = ~/cache/pip
+
+[flake8]
+ignore = E501,E722
+exclude = ./venv-tox,./.tox
+max-complexity = 27
 
 [testenv]
 setenv =
@@ -11,5 +16,20 @@ setenv =
 deps = -r{toxinidir}/requirements.txt
 commands =
     coverage run --branch manage.py test titanium_cloud
-    coverage report --omit=".tox/*,*tests*,*__init__.py,*newton*" --fail-under=30
-    coverage xml -i
+    coverage report --omit=".tox/*,*tests*,*__init__.py,*newton_base*,*common*" --fail-under=30
+
+[testenv:pep8]
+deps=flake8
+commands=flake8
+
+[testenv:cov]
+commands = coverage xml --omit="*test_*,*__init__.py,*site-packages*"
+
+[testenv:cover]
+setenv=
+  DJANGO_SETTINGS_MODULE = titanium_cloud.settings-cover
+commands =
+  coverage erase
+  {[testenv]commands}
+  coverage xml -i
+
