--- a/windriver/tox.ini
+++ b/windriver/tox.ini
@@ -16,14 +16,14 @@ setenv =
 deps = -r{toxinidir}/requirements.txt
 commands =
     coverage run --branch manage.py test titanium_cloud
-    coverage report --omit=".tox/*,*tests*,*__init__.py,*newton_base*,*common*" --fail-under=30
+    coverage report --omit="./venv-tox/*,./.tox/*,*tests*,*__init__.py,*newton_base*,*common*" --fail-under=30
 
 [testenv:pep8]
 deps=flake8
 commands=flake8
 
 [testenv:cov]
-commands = coverage xml --omit="*test_*,*__init__.py,*site-packages*"
+commands = coverage xml --omit="./venv-tox/*,./.tox/*,*tests*,*__init__.py,*newton_base*,*common*, *site-packages*"
 
 [testenv:cover]
 setenv=
