Exclude unwanted python env files
Change-Id: Ic1a2f89d26365bdd7be9300d902f28eadd83260b
Issue-ID: MULTICLOUD-171
Signed-off-by: Yun Huang <yun.huang@windriver.com>

--- a/windriver/pom.xml
+++ b/windriver/pom.xml
@@ -47,7 +47,7 @@
         <sonar.language>py</sonar.language>
         <sonar.pluginName>Python</sonar.pluginName>
         <sonar.inclusions>**/*.py</sonar.inclusions>
-        <sonar.exclusions>tests/*,setup.py</sonar.exclusions>
+        <sonar.exclusions>venv-tox/*,.tox/*, */tests/*,setup.py</sonar.exclusions>
     </properties>
     <build>
       <pluginManagement>
