Fix sonar coverage issue for ocata
Change-Id: I716fb55a0da6bced6053084a18c2e2297e6708ec
Issue-ID: MULTICLOUD-171
Signed-off-by: Yun Huang <yun.huang@windriver.com>

--- a/ocata/tox.ini
+++ b/ocata/tox.ini
@@ -1,15 +1,34 @@
 [tox]
-envlist = py27,py35
+envlist = py27,py35,cov
 skipsdist = true
 
 [tox:jenkins]
 downloadcache = ~/cache/pip
+
+[flake8]
+ignore = E501,E722
+exclude = ./venv-tox,./.tox
+max-complexity = 27
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}/../share
 deps = -r{toxinidir}/requirements.txt
 commands = 
-    coverage run --branch manage.py test
-    coverage report --omit=".tox/*,*tests*,*__init__.py,*newton*" --fail-under=30
-    coverage xml -i
+    coverage run --branch manage.py test ocata
+    coverage report --omit="./venv-tox/*,./.tox/*,*tests*,*__init__.py,*newton_base*,*common*" --fail-under=30
+
+[testenv:pep8]
+deps=flake8
+commands=flake8
+
+[testenv:cov]
+commands = coverage xml --omit="./venv-tox/*,./.tox/*,*tests*,*__init__.py,*newton_base*,*common*, *site-packages*"
+
+[testenv:cover]
+setenv=
+  DJANGO_SETTINGS_MODULE = ocata.settings-cover
+commands =
+  coverage erase
+  {[testenv]commands}
+  coverage xml -i
