--- a/newton/pom.xml
+++ b/newton/pom.xml
@@ -27,10 +27,18 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.onap.multicloud.openstack</groupId>
     <artifactId>multicloud-openstack-newton</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>multicloud/openstack/newton</name>
     <description>multicloud for openstack newton</description>
+    <dependencies>
+        <dependency>
+            <groupId>org.onap.multicloud.openstack</groupId>
+            <artifactId>multicloud-openstack-newton</artifactId>
+            <version>1.1.0</version>
+            <type>zip</type>
+        </dependency>
+    </dependencies>
     <properties>
         <encoding>UTF-8</encoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -42,10 +50,61 @@
         <sonar.language>py</sonar.language>
         <sonar.pluginName>Python</sonar.pluginName>
         <sonar.inclusions>**/*.py</sonar.inclusions>
-        <sonar.exclusions>tests/*,setup.py</sonar.exclusions>
+        <sonar.exclusions>**/venv-tox/**,**/.tox/**, **/tests/**,setup.py</sonar.exclusions>
     </properties>
     <build>
-      <plugins>
+      <pluginManagement>
+        <plugins>
+            <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>exec-maven-plugin</artifactId>
+              <version>1.2.1</version>
+              <configuration>
+                <executable>${session.executionRootDirectory}/mvn-phase-script.sh</executable>
+                <environmentVariables>
+                  <!-- make mvn properties as env for our script -->
+                  <MVN_PROJECT_GROUPID>${project.groupId}</MVN_PROJECT_GROUPID>
+                  <MVN_PROJECT_ARTIFACTID>${project.artifactId}</MVN_PROJECT_ARTIFACTID>
+                  <MVN_PROJECT_VERSION>${project.version}</MVN_PROJECT_VERSION>
+                </environmentVariables>
+              </configuration>
+            </plugin>
+        </plugins>                                                                                                                                                         
+      </pluginManagement>                                                                                                                                                  
+        <plugins>                                                                                                                                                          
+        <plugin>                                                                                                                                                           
+            <groupId>org.codehaus.mojo</groupId>                                                                                                                           
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.2.1</version>                                                                                                                                       
+            <executions>                                                                                                                                                   
+              <execution>                                                                                                                                                  
+                <id>clean phase script</id>                                                                                                                                
+                <phase>clean</phase>                                                                                                                                       
+                <goals>                                                                                                                                                    
+                  <goal>exec</goal>                                                                                                                                        
+                </goals>                                                                                                                                                   
+                <configuration>                                                                                                                                            
+                  <arguments>                                                                                                                                              
+                    <argument>__</argument>                                                                                                                                
+                    <argument>clean</argument>                                                                                                                             
+                  </arguments>                                                                                                                                             
+                </configuration>                                                                                                                                           
+              </execution>                                                                                                                                                 
+              <execution>                                                                                                                                                  
+                <id>test script</id>                                                                                                                                       
+                <phase>test</phase>                                                                                                                                        
+                <goals>                                                                                                                                                    
+                  <goal>exec</goal>                                                                                                                                        
+                </goals>                                                                                                                                                   
+                <configuration>                                                                                                                                            
+                  <arguments>                                                                                                                                              
+                    <argument>__</argument>                                                                                                                                
+                    <argument>test</argument>                                                                                                                              
+                  </arguments>                                                                                                                                             
+                </configuration>                                                                                                                                           
+              </execution>                                                                                                                                                 
+            </executions>                                                                                                                                                  
+        </plugin>                 
         <plugin>
             <artifactId>maven-assembly-plugin</artifactId>
             <configuration>
