Integrate uwsgi with django
To enable parallel processing of plugin services

Change-Id: I61e9934273a8448ee6a437c9832a45d1f75a7a60
Issue-ID: MULTICLOUD-187
Signed-off-by: Yun Huang <yun.huang@windriver.com>

--- a/newton/requirements.txt
+++ b/newton/requirements.txt
@@ -13,6 +13,9 @@ keystoneauth1==2.19.0
 #python-memcached
 python-memcached
 
+#uwsgi for parallel processing
+uwsgi
+
 # for unit test
 coverage==4.2
 mock==2.0.0
