--- a/ocata/requirements.txt
+++ b/ocata/requirements.txt
@@ -11,6 +11,9 @@ keystoneauth1==2.18.0
 #python-memcached
 python-memcached
 
+#uwsgi for parallel processing
+uwsgi
+
 # for unit test
 coverage==4.2
 mock==2.0.0
