Correct sonar script pathname
Change-Id: Idc527e0bea04556f78789042faf2d0fff7ccacf4
Issue-ID: MULTICLOUD-171
Signed-off-by: Yun Huang <yun.huang@windriver.com>

--- a/newton/tox.ini
+++ b/newton/tox.ini
@@ -16,12 +16,12 @@ setenv =
 deps = -r{toxinidir}/requirements.txt
 commands =
     coverage run --branch manage.py test newton
-    coverage report --omit="./venv-tox/*,./.tox/*,*tests*,*__init__.py,*newton_base*,*common*" --fail-under=30
+    coverage report --omit="./venv-tox/*,./.tox/*,*tests*,*__init__.py" --fail-under=30
 
 [testenv:pep8]
 deps=flake8
 commands=flake8
 
 [testenv:cov]
-commands = coverage xml --omit="./venv-tox/*,./.tox/*,*tests*,*__init__.py,*newton_base*,*common*, *site-packages*"
+commands = coverage xml --omit="./venv-tox/*,./.tox/*,*tests*,*__init__.py, *site-packages*"
 
