--- a/newton/pom.xml
+++ b/newton/pom.xml
@@ -36,7 +36,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <nexusproxy>https://nexus.onap.org</nexusproxy>
-        <sonar.sources>.</sonar.sources>
+        <sonar.sources>.,../share</sonar.sources>
         <sonar.junit.reportsPath>xunit-results.xml</sonar.junit.reportsPath>
         <sonar.python.coverage.reportPath>coverage.xml</sonar.python.coverage.reportPath>
         <sonar.language>py</sonar.language>
@@ -52,7 +52,7 @@
               <artifactId>exec-maven-plugin</artifactId>
               <version>1.2.1</version>
               <configuration>
-                <executable>${session.executionRootDirectory}/mvn-phase-script.sh</executable>
+                <executable>${project.basedir}/mvn-phase-script.sh</executable>
                 <environmentVariables>
                   <!-- make mvn properties as env for our script -->
                   <MVN_PROJECT_GROUPID>${project.groupId}</MVN_PROJECT_GROUPID>
